[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/bullet64.png" type="Texture" id=1]
[ext_resource path="res://actors/bullets/ParryBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="ParryBullet" type="Area2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." groups=["PARRYBULLET"]]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 4, 4 )

[node name="Timer" type="Timer" parent="."]

[node name="InitTimer" type="Timer" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]
